[package]
name = "api_onlyone_admin"
version = "1.0.0"
edition = "2021"

# Do not use workspace deps as they won't work in docker context.
[dependencies]
actix-web = "4"
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.7.4", features = ["postgres"] }
dotenv = "0.15"
tokio = { version = "1.36.0", features = ["full"] }